--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "cross-env NODE_ENV=development vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "deploy": "vue-cli-service s3-deploy",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -19,6 +20,7 @@
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-class-component": "^6.0.0",
+    "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
