--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   },
   "dependencies": {
     "@types/dotenv": "^4.0.3",
+    "@types/lodash": "^4.14.117",
+    "@types/node-schedule": "^1.2.2",
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "dotenv": "^6.1.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "node-schedule": "^1.3.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-class-component": "^6.0.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
+    "vue-js-modal": "^1.3.26",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
