--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "dotenv": "^6.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "node-schedule": "^1.3.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
@@ -28,6 +27,7 @@
     "vue-js-modal": "^1.3.26",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue2-animate": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
   },
